onboarding-examples/newapp-2/newapp-2-deployment.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-b
  namespace: newapp-2 ##tenant-a
  labels:
    app: svc-b
    version: 2023-v1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-b
  template:
    metadata:
      labels:
        app: svc-b
        version: 2023-v1.0.0
    spec:
      containers:
      - name: hello-app-sm-py
        # image: us-docker.pkg.dev/jr-network-infra-1-4978/joseret-joonix-docker/hello_apps/joseret-hello_app_2023:v1.0.0
        image: us-central1-docker.pkg.dev/cn-datahub-logs/hlf-acm/hello_app:0.0.1
        imagePullPolicy: Always
        command: ["python"]
        args: [
          "hello_app_v4.py",
        ]
        tty: true
        ports:
        - containerPort: 8080
          name: http
