onboarding-examples/newapp-2/newapp-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: newapp-2
  labels:
    app: svc-b
    version: 2023-v1.0.0
spec:
  type: ClusterIP
  selector:
    app: svc-b
    version: 2023-v1.0.0
  ports:
  - name: http-access
    port: 8080
    targetPort: 8080
    protocol: TCP
