onboarding-examples/newapp-2/newapp-2-virtual-service-av.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: svc-b
  namespace: newapp-2
spec:
  hosts:
  - "cluster2.sandbox.whereami.avinashj.in" 
  gateways:
  - "asm-gateway/test-smoke-gateway" 
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: "svc-b.newapp-2.svc.cluster.local"
